--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -37,6 +37,9 @@
 
 
 @media (max-width: 768px) {
+    .food-infor h3 {
+        font-size: 26px;
+    }
     .text--decor {
         margin-bottom: 8px !important;
     }
@@ -78,7 +81,7 @@
         padding: 0px;
     }
     .row.active {
-        display: grid !important;
+        display: grid;
         grid-template-columns: repeat(2, 1fr);
         gap: 8px;
         margin-top: 8px;
@@ -106,6 +109,10 @@
 }
 
 @media (max-width: 578px) {
+    .row.active {
+        display: flex;
+        flex-direction: column;
+    }
     .food-grids {
         display: flex;
         flex-direction: column;
