--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -152,9 +152,9 @@ button{
 
 .event-schedule {
     position: relative;
-    width: 100%;
-    height: 650px;
+    height: 100%;
     overflow: hidden;
+    padding-bottom: 20px;
 }
 .bg-only {
     position: absolute;
